<resources>
    <string name="app_name">movie_animation_motion_layout</string>
    <string name="_6_4">6.4</string>
    <string name="_127_minutes">127 Minutes</string>
    <string name="released">released</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae et leo duis ut diam quam nulla porttitor massa. Tortor condimentum lacinia quis vel eros donec ac. Ornare lectus sit amet est placerat. Cursus euismod quis viverra nibh cras pulvinar. Elementum nisi quis eleifend quam. Dictum sit amet justo donec enim. Urna neque viverra justo nec. Ut aliquam purus sit amet luctus venenatis. Viverra ipsum nunc aliquet bibendum enim.</string>
    <string name="top_gun_moverick">Top Gun : Moverick</string>
    <string name="action">action</string>
</resources>